--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.4.0"
+    },
+    "require-dev": {
         "symfony/http-kernel": "2.5.*"
     },
     "autoload": {
